testsuite/tests/typecheck/should_fail/T15330.stderr

T15330.hs:11:6: error:
    • Couldn't match type: [Char]
                     with: Proxy (T 'True)
      Expected: Proxy (T 'True)
        Actual: String
    • In the expression: "foo"
      In an equation for ‘f1’: f1 = "foo"

T15330.hs:15:6: error:
    • Couldn't match type: [Char]
                     with: Proxy (t 'True)
      Expected: Proxy (t 'True)
        Actual: String
    • In the expression: "foo"
      In an equation for ‘f2’: f2 = "foo"
    • Relevant bindings include
        f2 :: Proxy (t 'True) (bound at T15330.hs:15:1)
